--- a/requirements.txt
+++ b/requirements.txt
@@ -11,6 +11,7 @@ coreschema==0.0.4
 cryptography==44.0.0
 defusedxml==0.8.0rc2
 Django==4.2.2
+dj-database-url==2.3.0
 django-cors-headers==4.1.0
 django-database-url==1.0.3
 django-rest-passwordreset==1.3.0
